--- a/client/views/index.html
+++ b/client/views/index.html
@@ -31,6 +31,9 @@
             border-left: 1px solid #f1f1f1;
             flex: 3;
         }
+        .main-navbar ul > li {
+            padding: 0 19px;
+        }
         
     </style>
     <header class="header">
