Add html structure

--- a/client/public/stylesheets/index.css
+++ b/client/public/stylesheets/index.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Apple SD Gothic Neo','Malgun Gothic', sans-serif;
     background-color: #f3f3f3;
+    margin-bottom: 30px;
 }
 
 header {
