--- a/client/views/index.html
+++ b/client/views/index.html
@@ -28,13 +28,77 @@
             flex: 2;
         }
         .banner__panel__slideshow {
+            position: relative;
             border-left: 1px solid #f1f1f1;
             flex: 3;
+        }
+        .banner__panel__slideshow > .slide > img {
+            display: block;
+            margin: auto;
         }
         .main-navbar ul > li {
             padding: 0 19px;
         }
-        
+
+        .left-icon {
+            position: absolute;
+            left: 20px;
+            bottom: calc(50% - 22px);
+            width: 45px;
+        }
+        .right-icon {
+            position: absolute;
+            right: 20px;
+            bottom: calc(50% - 22px);
+            width: 45px;
+        }
+        .products {
+            display: flex;
+        }
+        .card {
+            padding: 21px 27px;
+            border-right: 1px solid #f1f1f1;
+        }
+        .card__title {
+            font-weight: bold;
+            font-size: 14px;
+            margin-top: 5px;
+        }
+        .card__subtitle {
+            font-size: 12px;
+            color: #888888;
+            margin-top: 3px;
+        }
+        .card__badge > img{
+            margin-top: 10px;
+            height: 18px;
+        }
+        .card__image {
+            width: 200px;
+        }
+        .more-button {
+            background-color: #e9e9e9;
+            height: 50px;
+            text-align: center;
+            border: 1px solid #f1f1f1;
+        }
+        .more-button > div {
+            font-size: 16px;
+            color: #333;
+            padding-top: 17px;
+        }
+        .panel__card-slideshow{
+            display: flex;
+        }
+        .title {
+            margin: 50px auto 0;
+            width: 1274px; 
+            font-size: 22px;
+            line-height: 22px;
+            color: #000;
+            letter-spacing: -1px;
+            margin-bottom: 11px;
+        }
     </style>
     <header class="header">
         <div class="header__logo">
@@ -81,22 +145,98 @@
                 <img src="//shop1.daumcdn.net/shophow/sib/0_210107175444_NYJcyPtwHStBMzGLVzNvoNaaQaIJdBsr">
             </div>
             <div class="banner__panel__slideshow">
-                <img src="//shop1.daumcdn.net/shophow/sib/0_210104155806_bdDtOdkNBygzfeWOnQwgbcKKPdgvmwyQ">
+                <div class="slide">
+                    <img src="//shop1.daumcdn.net/shophow/sib/0_210104155806_bdDtOdkNBygzfeWOnQwgbcKKPdgvmwyQ">
+
+                </div>
+                <img class="banner__panel__slideshow__left-icon left-icon" src="images/left-arrow.png"></img>
+                <img class="banner__panel__slideshow__right-icon right-icon" src="images/right-arrow.png"></img>
             </div>
         </div>
         <div class="panel">
             <div class="products">
                 <div class="card">
-                    <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FK11009405203.jpg%3Fut%3D20201104061159&amp;scode=talkgift">
+                    <img class="card__image" src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FK11009405203.jpg%3Fut%3D20201104061159&amp;scode=talkgift">
+                    <div class="card__title">
+                        치즈의 무궁무진한 세계!
+                    </div>
+                    <div class="card__subtitle">
+                        다양한 종류의 치즈를 한눈에
+                    </div>
+                    <div class="card__badge">
+                        <img src="images/thema-icon.png">
+                    </div>
                 </div>
             </div>
             <div class="more-button">
-                더보기(123건) ▼
+                <div>
+                    더보기(123건) ▼
+                </div>
             </div>
         </div>
-        <div class="panel">
-            <div class="panel__card-slideshow">
-
+    </div>     
+    <div class="title">지금뜨는 테마 카테고리</div>
+    <div class="container container__slideshow slideshow">
+        <div class="panel__card-slideshow">
+            <div class="card">
+                <img class="card__image" src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FK11009405203.jpg%3Fut%3D20201104061159&amp;scode=talkgift">
+                <div class="card__title">
+                    치즈의 무궁무진한 세계!
+                </div>
+                <div class="card__subtitle">
+                    다양한 종류의 치즈를 한눈에
+                </div>
+                <div class="card__badge">
+                    <img src="images/thema-icon.png">
+                </div>
+            </div>
+            <div class="card">
+                <img class="card__image" src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FK11009405203.jpg%3Fut%3D20201104061159&amp;scode=talkgift">
+                <div class="card__title">
+                    치즈의 무궁무진한 세계!
+                </div>
+                <div class="card__subtitle">
+                    다양한 종류의 치즈를 한눈에
+                </div>
+                <div class="card__badge">
+                    <img src="images/thema-icon.png">
+                </div>
+            </div>
+            <div class="card">
+                <img class="card__image" src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FK11009405203.jpg%3Fut%3D20201104061159&amp;scode=talkgift">
+                <div class="card__title">
+                    치즈의 무궁무진한 세계!
+                </div>
+                <div class="card__subtitle">
+                    다양한 종류의 치즈를 한눈에
+                </div>
+                <div class="card__badge">
+                    <img src="images/thema-icon.png">
+                </div>
+            </div>
+            <div class="card">
+                <img class="card__image" src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FK11009405203.jpg%3Fut%3D20201104061159&amp;scode=talkgift">
+                <div class="card__title">
+                    치즈의 무궁무진한 세계!
+                </div>
+                <div class="card__subtitle">
+                    다양한 종류의 치즈를 한눈에
+                </div>
+                <div class="card__badge">
+                    <img src="images/thema-icon.png">
+                </div>
+            </div>
+            <div class="card">
+                <img class="card__image" src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FK11009405203.jpg%3Fut%3D20201104061159&amp;scode=talkgift">
+                <div class="card__title">
+                    치즈의 무궁무진한 세계!
+                </div>
+                <div class="card__subtitle">
+                    다양한 종류의 치즈를 한눈에
+                </div>
+                <div class="card__badge">
+                    <img src="images/thema-icon.png">
+                </div>
             </div>
         </div>
     </div>
