--- a/client/public/stylesheets/index.css
+++ b/client/public/stylesheets/index.css
@@ -86,3 +86,96 @@ header {
     margin: 11px;
     width: 28px;
 }
+.container {
+    width: 1274px;
+    overflow: hidden;
+    /* width: 971px; */
+    margin: 0 auto;
+    border: 1px solid #e4e4e4;
+    border-bottom: 0 none;
+    background-color: #fff;
+}
+.container__banner {
+    margin-top: 19px;
+}
+.banner--first {
+    height: 340px;
+    display: flex;
+    justify-content: stretch;
+    border-bottom: 1px solid #f1f1f1;
+}
+.banner__panel {
+    flex: 2;
+}
+.banner__panel__slideshow {
+    position: relative;
+    border-left: 1px solid #f1f1f1;
+    flex: 3;
+}
+.banner__panel__slideshow > .slide > img {
+    display: block;
+    margin: auto;
+}
+.main-navbar ul > li {
+    padding: 0 19px;
+}
+
+.left-icon {
+    position: absolute;
+    left: 20px;
+    bottom: calc(50% - 22px);
+    width: 45px;
+}
+.right-icon {
+    position: absolute;
+    right: 20px;
+    bottom: calc(50% - 22px);
+    width: 45px;
+}
+.products {
+    display: flex;
+}
+.card {
+    padding: 21px 27px;
+    border-right: 1px solid #f1f1f1;
+}
+.card__title {
+    font-weight: bold;
+    font-size: 14px;
+    margin-top: 5px;
+}
+.card__subtitle {
+    font-size: 12px;
+    color: #888888;
+    margin-top: 3px;
+}
+.card__badge > img{
+    margin-top: 10px;
+    height: 18px;
+}
+.card__image {
+    width: 200px;
+}
+.more-button {
+    background-color: #e9e9e9;
+    height: 50px;
+    text-align: center;
+    border: 1px solid #f1f1f1;
+}
+.more-button > div {
+    font-size: 16px;
+    color: #333;
+    padding-top: 17px;
+}
+.panel__card-slideshow{
+    display: flex;
+}
+.title {
+    margin: 50px auto 0;
+    width: 1274px; 
+    font-size: 22px;
+    line-height: 22px;
+    color: #000;
+    letter-spacing: -1px;
+    margin-bottom: 11px;
+}
