--- a/client/views/index.html
+++ b/client/views/index.html
@@ -145,5 +145,6 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="utils/api.js"></script>
 </body>
 </html>
