Add custom querySelector functions

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -146,5 +146,6 @@
         </div>
     </div>
     <script type="text/javascript" src="utils/api.js"></script>
+    <script type="text/javascript" src="js/querySelector.js"></script>
 </body>
 </html>
