Add products class

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/products.css">
 </head>
 <body>
     <header class="header">
@@ -147,5 +148,6 @@
     </div>
     <script type="text/javascript" src="utils/api.js"></script>
     <script type="text/javascript" src="js/querySelector.js"></script>
+    <script type="text/javascript" src="js/products.js"></script>
 </body>
 </html>
