--- a/client/views/index.html
+++ b/client/views/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/index.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/card.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/products.css">
 </head>
 <body>
@@ -147,7 +148,8 @@
         </div>
     </div>
     <script type="text/javascript" src="utils/api.js"></script>
-    <script type="text/javascript" src="js/querySelector.js"></script>
+    <script type="text/javascript" src="utils/querySelector.js"></script>
+    <script type="text/javascript" src="js/card.js"></script>
     <script type="text/javascript" src="js/products.js"></script>
 </body>
 </html>
