Add npm scripts for sass compilication

--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -100,16 +100,17 @@ header {
 .banner--first {
     height: 340px;
     display: flex;
-    justify-content: stretch;
     border-bottom: 1px solid #f1f1f1;
 }
 .banner__panel {
-    flex: 2;
+    width: 484px;
+    margin: 0 14px;
 }
 .banner__panel__slideshow {
     position: relative;
     border-left: 1px solid #f1f1f1;
-    flex: 3;
+    width: 764px;
+    
 }
 .banner__panel__slideshow > .slide > img {
     display: block;
