Make recent products component

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -17,6 +17,10 @@
             <img src="images/search-icon.png">
         </div>
     </header>
+    <div class="recent-products-panel">
+        최근 본 상품이 없습니다.
+        <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FK11009405203.jpg%3Fut%3D20201104061159&amp;scode=talkgift">
+    </div>
     <div class="main-navbar__container">
         <div class="main-navbar">
             <div class="main-navbar--left">
@@ -152,5 +156,6 @@
     <script type="text/javascript" src="js/card.js"></script>
     <script type="text/javascript" src="js/slideshow.js"></script>
     <script type="text/javascript" src="js/products.js"></script>
+    <script type="text/javascript" src="js/recentProducts.js"></script>
 </body>
 </html>
