--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -136,3 +136,24 @@ header {
     letter-spacing: -1px;
     margin-bottom: 11px;
 }
+.recent-products-panel {
+    position: absolute;
+    width: 500px;
+    min-height: 500px;
+    right: calc((100% - 1276px)/2);
+    top: 188px;
+    z-index: 1;
+    border: 1px solid gray;
+    background-color: #fff;
+    padding: 10px;
+    display: none;
+}
+
+.visible {
+    display: block;
+}
+
+.recent-products-panel > img {
+    width: 150px;
+    margin: 5px;
+}
