Add style loader and file loader for webpack, add esmodules for js files

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
-    <link rel="stylesheet" type="text/css" href="css/card.css">
-    <link rel="stylesheet" type="text/css" href="css/slideshow.css">
-    <link rel="stylesheet" type="text/css" href="css/products.css">
 </head>
 <body>
     <header class="header">
@@ -151,11 +146,6 @@
         <a class="trand-prev" id="trandPrev">&#10094;</a>
         <a class="trand-next" id="trandNext">&#10095;</a>
     </div>
-    <script type="text/javascript" src="utils/api.js"></script>
-    <script type="text/javascript" src="utils/querySelector.js"></script>
-    <script type="text/javascript" src="js/card.js"></script>
-    <script type="text/javascript" src="js/slideshow.js"></script>
-    <script type="text/javascript" src="js/products.js"></script>
-    <script type="text/javascript" src="js/recentProducts.js"></script>
+    <script type="module" src="bundle.js"></script>
 </body>
 </html>
