Remove duplicated script tag

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -19,9 +19,14 @@
     <div class="main-navbar__container">
         <div class="main-navbar">
             <div class="main-navbar--left">
-                <div class="main-navbar--left__category-menu">
+                <div class="main-navbar--left__category-menu category__button">
                     <img src="images/3-bars.png"/>
-                    <div>카테고리</div>
+                    <div> 카테고리</div>
+                    <div class="category__container non-active">
+                        <div class="first-category"></div>
+                        <div class="second-category"></div>
+                        <div class="third-category"></div>
+                    </div>
                 </div>
                 <ul>
                     <li>핫딜</li>
@@ -146,6 +151,5 @@
         <a class="trand-prev" id="trandPrev">&#10094;</a>
         <a class="trand-next" id="trandNext">&#10095;</a>
     </div>
-    <script type="module" src="bundle.js"></script>
 </body>
 </html>
