--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -65,6 +65,9 @@ header {
     list-style: none;
     display: flex;
 }
+.main-navbar--left > ul > li {
+    padding: 0 19px;
+}
 .main-navbar--right {
     display: flex;
     height: 100%;
@@ -105,10 +108,6 @@ header {
 .banner__panel {
     width: 484px;
     margin: 0 14px;
-}
-
-.main-navbar ul > li {
-    padding: 0 19px;
 }
 
 .left-icon {
