Get arrow image for slideshow

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -57,21 +57,17 @@
             </div>
             <div class="banner__panel__slideshow slideshow">
                 <div class="group visible">
-                    <div class="slide">2</div>
-                    <div class="slide">0</div>
-                    <div class="slide">1</div>
+                    <div class="slide"></div>
+                    <div class="slide"></div>
+                    <div class="slide"></div>
                 </div>
                 <div class="group non-visible">
                     <div class="slide"></div>
                     <div class="slide"></div>
                     <div class="slide"></div>
                 </div>
-                <div class="next-button">
-                    <img class="banner__panel__slideshow__left-icon left-icon" src="images/left-arrow.png"></img>
-                </div>
-                <div>
-                    <img class="banner__panel__slideshow__right-icon right-icon" src="images/right-arrow.png"></img>
-                </div>
+                <div class="prev-button"></div>
+                <div class="next-button"></div>
             </div>
         </div>
         <div class="panel">
