--- a/client/views/index.html
+++ b/client/views/index.html
@@ -4,13 +4,6 @@
 </head>
 <body>
     <header class="header">
-        <div class="header__logo">
-            <img src="//search1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/logo_shw.png">
-        </div>
-        <div class="header__search-box">
-            <input type="text">
-            <img src="images/search-icon.png">
-        </div>
     </header>
     <div class="recent-products-panel">
         최근 본 상품이 없습니다.
@@ -80,72 +73,27 @@
         </div>
     </div>     
     <div class="title">지금뜨는 테마 카테고리</div>
-    <div class="container container__slideshow slideshow">
+    <div class="container container__slideshow">
         <div class="panel__card-slideshow">
-            
-            <div class="card">
-                <img class="card__image" src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FK11009405203.jpg%3Fut%3D20201104061159&amp;scode=talkgift">
-                <div class="card__title">
-                    치즈의 무궁무진한 세계!
-                </div>
-                <div class="card__subtitle">
-                    다양한 종류의 치즈를 한눈에
-                </div>
-                <div class="card__badge">
-                    <img src="images/thema-icon.png">
-                </div>
+            <div class="group visible">
+                <div class="slide"></div>
+                <div class="slide"></div>
+                <div class="slide"></div>
+                <div class="slide"></div>
+                <div class="slide"></div>
             </div>
-            <div class="card">
-                <img class="card__image" src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FK11009405203.jpg%3Fut%3D20201104061159&amp;scode=talkgift">
-                <div class="card__title">
-                    치즈의 무궁무진한 세계!
-                </div>
-                <div class="card__subtitle">
-                    다양한 종류의 치즈를 한눈에
-                </div>
-                <div class="card__badge">
-                    <img src="images/thema-icon.png">
-                </div>
+            <div class="group non-visible">
+                <div class="slide"></div>
+                <div class="slide"></div>
+                <div class="slide"></div>
+                <div class="slide"></div>
+                <div class="slide"></div>
             </div>
-            <div class="card">
-                <img class="card__image" src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FK11009405203.jpg%3Fut%3D20201104061159&amp;scode=talkgift">
-                <div class="card__title">
-                    치즈의 무궁무진한 세계!
-                </div>
-                <div class="card__subtitle">
-                    다양한 종류의 치즈를 한눈에
-                </div>
-                <div class="card__badge">
-                    <img src="images/thema-icon.png">
-                </div>
-            </div>
-            <div class="card">
-                <img class="card__image" src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FK11009405203.jpg%3Fut%3D20201104061159&amp;scode=talkgift">
-                <div class="card__title">
-                    치즈의 무궁무진한 세계!
-                </div>
-                <div class="card__subtitle">
-                    다양한 종류의 치즈를 한눈에
-                </div>
-                <div class="card__badge">
-                    <img src="images/thema-icon.png">
-                </div>
-            </div>
-            <div class="card">
-                <img class="card__image" src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FK11009405203.jpg%3Fut%3D20201104061159&amp;scode=talkgift">
-                <div class="card__title">
-                    치즈의 무궁무진한 세계!
-                </div>
-                <div class="card__subtitle">
-                    다양한 종류의 치즈를 한눈에
-                </div>
-                <div class="card__badge">
-                    <img src="images/thema-icon.png">
-                </div>
-            </div>
+            <div class="prev-button"></div>
+            <div class="next-button"></div>
+            <!-- <a class="trand-prev" id="trandPrev">&#10094;</a>
+            <a class="trand-next" id="trandNext">&#10095;</a> -->
         </div>
-        <a class="trand-prev" id="trandPrev">&#10094;</a>
-        <a class="trand-next" id="trandNext">&#10095;</a>
     </div>
 </body>
 </html>
